--- a/packages/au2-prism/src/prism-editor.scss
+++ b/packages/au2-prism/src/prism-editor.scss
@@ -5,11 +5,11 @@
   background-color: rgb(45, 45, 45);
   color: #ccc;
   height: auto !important;
-  border-radius: 0.75rem;
+  // border-radius: 0.75rem;
   font-family: Fira code, Fira Mono, Consolas, Menlo, Courier, monospace;
   font-size: 14px;
   line-height: 1.5;
-  padding: 5px;
+  padding: 1em;
 }
 
 .prism-editor-wrapper {
